# MLops_course

./: README.md  SETUP.md  pyproject.toml
src/: Basic_ml_experiment.py  fastapi_with_ngrok.py
src/data/: model.pkl
